Cambios en el Splash Screeen y el Icono

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.LiamApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#00796B</item>
     </style>
 
     <style name="Theme.LiamApp" parent="Base.Theme.LiamApp" />
+
+    <!-- Splash Screen Theme -->
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_medical_cross</item>
+        <item name="windowSplashScreenBackground">#00796B</item>
+        <item name="postSplashScreenTheme">@style/Theme.LiamApp</item>
+    </style>
 </resources>
